# rust-bare-metal-stm32f4

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  memory.x  openocd.gdb
.cargo/: config
app/: Cargo.toml
app/src/: main.rs
rt/: Cargo.toml  Embed.toml  asm.s  build.rs  memory.x
rt/src/: lib.rs
src/: main.rs
