[package]
name = "app"
version = "0.1.0"
edition = "2021"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic


[dependencies]
#cortex-m = "0.6.0"
#cortex-m-rt = "0.6.10"
#cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
